Bug 518711 - Changing shortcuts "next and previous frame/keyframe" do not work when importing audio.
Summary: Changing shortcuts "next and previous frame/keyframe" do not work when impor...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.3.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: triaged
: 519248 520611 521273 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-04-08 20:54 UTC by Federico
Modified: 2026-07-01 03:36 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Federico 2026-04-08 20:54:13 UTC
When importing audio, added shortcuts stop working: Next and Previous Frame and  Next and Previous KeyFrame. This error does not occur with arrow Left and Right if the other added shortcuts work correctly  In Krita version 5.2, it works correctly with the audio.

SUMMARY
STEPS TO REPRODUCE
1. Import audio
2. The added keyboard shortcuts no longer work. 
3. if the other added keyboard shortcuts work correctly

OBSERVED RESULT
Impor audio error shortcut next and previous frame/keyframe

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: Windows 11

KDE Plasma Version: Version: 5.3.1 (git 9069dbc)
 Installation type: installer / portable package
 Hidpi: true

KDE Frameworks Version: 
Qt Version: Version (compiled): 5.15.7
  Version (loaded): 5.15.7


ADDITIONAL INFORMATION
Comment 1 WTPerson 2026-05-05 13:44:58 UTC
Can reproduce this bug
The keystrokes used make no difference

SOFTWARE/OS VERSIONS
Linux: Linux Mint 22.3 (X-Cinnamon)

KDE Plasma Version: Version: 5.3.1 (git 9069dbc)
 Installation type: Appimage build
 Hidpi: true
Comment 2 fallensnowss 2026-05-08 23:15:02 UTC
Experienced the same bug since updating to 5.3.0, no change after updating to 5.3.1. Opening any file that has audio imported seems to break the Next/Previous Frame shortcuts, even upon closing the file and opening one without audio. Only closing Krita entirely and reopening to a non-audio file will allow the shortcuts to work again.
Comment 3 Emmet O'Neill 2026-05-13 17:52:46 UTC
Hi there, Federico.

I've been able to confirm this bug and I think I have a rough idea what the cause is (probably something to do with the switching of internal playback engines when audio is attached causing the animation-related action to be nullified). I'll put it right on the top of my list of bugs to tackle next week.

Thanks a lot for the report!
Comment 4 Emmet O'Neill 2026-05-13 17:53:38 UTC
*** Bug 519248 has been marked as a duplicate of this bug. ***
Comment 5 dra.w.p.il.e+bugskde 2026-05-24 21:38:37 UTC
*** Bug 520611 has been marked as a duplicate of this bug. ***
Comment 6 dra.w.p.il.e+bugskde 2026-06-10 07:19:53 UTC
*** Bug 521273 has been marked as a duplicate of this bug. ***
Comment 7 Emmet O'Neill 2026-06-30 23:35:32 UTC
Git commit 96434e2e71aae3a509506518bf83c312b634ac66 by Emmet O'Neill.
Committed on 30/06/2026 at 23:32.
Pushed by emmetoneill into branch 'master'.

UI/Animation: Fixed some animation actions breaking when switching playback engines.

Action connects must be reestablished when Krita changes internal animation
playback engines. For example, when switching to the KisPlaybackEngineMLT
when audio is added to an animation.

M  +77   -61   plugins/dockers/animation/KisAnimTimelineDocker.cpp
M  +3    -0    plugins/dockers/animation/KisAnimTimelineDocker.h

https://invent.kde.org/graphics/krita/-/commit/96434e2e71aae3a509506518bf83c312b634ac66
Comment 8 Emmet O'Neill 2026-07-01 03:36:22 UTC
Git commit 114a29d67c7e15093bea06d61c7ee483e89b6867 by Emmet O'Neill.
Committed on 01/07/2026 at 03:36.
Pushed by emmetoneill into branch 'krita/6.0'.

UI/Animation: Fixed some animation actions breaking when switching playback engines.

Action connects must be reestablished when Krita changes internal animation
playback engines. For example, when switching to the KisPlaybackEngineMLT
when audio is added to an animation.


(cherry picked from commit 96434e2e71aae3a509506518bf83c312b634ac66)

Co-authored-by: Emmet O'Neill <emmetoneill.pdx@gmail.com>

M  +77   -61   plugins/dockers/animation/KisAnimTimelineDocker.cpp
M  +3    -0    plugins/dockers/animation/KisAnimTimelineDocker.h

https://invent.kde.org/graphics/krita/-/commit/114a29d67c7e15093bea06d61c7ee483e89b6867