UI/Animation: Fixed some animation actions breaking when switching playback engines.

Action connects must be reestablished when Krita changes internal animation
playback engines. For example, when switching to the KisPlaybackEngineMLT
when audio is added to an animation.

BUG:518711


(cherry picked from commit 96434e2e71aae3a509506518bf83c312b634ac66)

Co-authored-by: Emmet O'Neill <emmetoneill.pdx@gmail.com>