plugins/dockers/animation/KisAnimTimelineDocker.cpp
@@ -512,6 +512,76 @@ void KisAnimTimelineDocker::setImageAnimSettings()
     applicator->end();
 }
 
+void KisAnimTimelineDocker::establishPlaybackEngineConnections(KisPlaybackEngine *playbackEngine, KisActionManager *actionManager)
+{
+    if (actionManager) {
+        // Connect actions..
+        KisAction *action = nullptr;
+
+        action = actionManager->createAction("stop_playback");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(stop()));
+
+        action = actionManager->createAction("previous_frame");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(previousFrame()));
+
+        action = actionManager->createAction("next_frame");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(nextFrame()));
+
+        action = actionManager->createAction("previous_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(previousKeyframe()));
+
+        action = actionManager->createAction("next_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(nextKeyframe()));
+
+        action = actionManager->createAction("previous_matching_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(previousMatchingKeyframe()));
+
+        action = actionManager->createAction("next_matching_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(nextMatchingKeyframe()));
+
+        action = actionManager->createAction("previous_unfiltered_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(previousUnfilteredKeyframe()));
+
+        action = actionManager->createAction("next_unfiltered_keyframe");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, SIGNAL(triggered(bool)), playbackEngine, SLOT(nextUnfilteredKeyframe()));
+
+        action = actionManager->createAction("first_frame");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, &KisAction::triggered, this, [this, playbackEngine](bool){
+            if (m_d->canvas) {
+                playbackEngine->firstFrame();
+            }
+        });
+
+        action = actionManager->createAction("last_frame");
+        action->setActivationFlags(KisAction::ACTIVE_IMAGE);
+        connect(action, &KisAction::triggered, this, [this, playbackEngine](bool){
+            if (m_d->canvas) {
+                playbackEngine->lastFrame();
+            }
+        });
+    }
+
+    // Connect transport controls gui..
+    connect(m_d->titlebar->transport, SIGNAL(skipBack()), playbackEngine, SLOT(previousKeyframe()), Qt::UniqueConnection);
+    connect(m_d->titlebar->transport, SIGNAL(back()), playbackEngine, SLOT(previousFrame()), Qt::UniqueConnection);
+    connect(m_d->titlebar->transport, SIGNAL(stop()), playbackEngine, SLOT(stop()), Qt::UniqueConnection);
+    connect(m_d->titlebar->transport, SIGNAL(playPause()), this, SLOT(togglePlayback()), Qt::UniqueConnection);
+    connect(m_d->titlebar->transport, SIGNAL(forward()), playbackEngine, SLOT(nextFrame()), Qt::UniqueConnection);
+    connect(m_d->titlebar->transport, SIGNAL(skipForward()), playbackEngine, SLOT(nextKeyframe()), Qt::UniqueConnection);
+
+    connect(m_d->titlebar->frameRegister, SIGNAL(valueChanged(int)), playbackEngine, SLOT(seek(int)), Qt::UniqueConnection);
+}
+
 void KisAnimTimelineDocker::updateFrameCache()
 {
     m_d->framesModel->setFrameCache(m_d->canvas->frameCache());
@@ -619,57 +689,7 @@ void KisAnimTimelineDocker::setViewManager(KisViewManager *view)
     action->setActivationFlags(KisAction::ACTIVE_IMAGE);
     connect(action, SIGNAL(triggered(bool)), this, SLOT(togglePlayback()));
 
-    action = actionManager->createAction("stop_playback");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(stop()));
-
-    action = actionManager->createAction("previous_frame");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(previousFrame()));
-
-    action = actionManager->createAction("next_frame");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(nextFrame()));
-
-    action = actionManager->createAction("previous_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(previousKeyframe()));
-
-    action = actionManager->createAction("next_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(nextKeyframe()));
-
-    action = actionManager->createAction("previous_matching_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(previousMatchingKeyframe()));
-
-    action = actionManager->createAction("next_matching_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(nextMatchingKeyframe()));
-
-    action = actionManager->createAction("previous_unfiltered_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(previousUnfilteredKeyframe()));
-
-    action = actionManager->createAction("next_unfiltered_keyframe");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, SIGNAL(triggered(bool)), m_d->playbackEngine, SLOT(nextUnfilteredKeyframe()));
-
-    action = actionManager->createAction("first_frame");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, &KisAction::triggered, this, [this](bool){
-       if (m_d->canvas) {
-           m_d->playbackEngine->firstFrame();
-       }
-    });
-
-    action = actionManager->createAction("last_frame");
-    action->setActivationFlags(KisAction::ACTIVE_IMAGE);
-    connect(action, &KisAction::triggered, this, [this](bool){
-       if (m_d->canvas) {
-           m_d->playbackEngine->lastFrame();
-       }
-    });
+    establishPlaybackEngineConnections(m_d->playbackEngine, actionManager);
 
     {
         action = actionManager->createAction("auto_key");
@@ -700,19 +720,15 @@ void KisAnimTimelineDocker::setPlaybackEngine(KisPlaybackEngine *playbackEngine)
 {
     if (!playbackEngine) return;
 
-    // Connect transport controls..
-    connect(m_d->titlebar->transport, SIGNAL(skipBack()), playbackEngine, SLOT(previousKeyframe()), Qt::UniqueConnection);
-    connect(m_d->titlebar->transport, SIGNAL(back()), playbackEngine, SLOT(previousFrame()), Qt::UniqueConnection);
-    connect(m_d->titlebar->transport, SIGNAL(stop()), playbackEngine, SLOT(stop()), Qt::UniqueConnection);
-    connect(m_d->titlebar->transport, SIGNAL(playPause()), this, SLOT(togglePlayback()), Qt::UniqueConnection);
-    connect(m_d->titlebar->transport, SIGNAL(forward()), playbackEngine, SLOT(nextFrame()), Qt::UniqueConnection);
-    connect(m_d->titlebar->transport, SIGNAL(skipForward()), playbackEngine, SLOT(nextKeyframe()), Qt::UniqueConnection);
-
-    connect(m_d->titlebar->frameRegister, SIGNAL(valueChanged(int)), playbackEngine, SLOT(seek(int)), Qt::UniqueConnection);
-
     m_d->controlsModel.connectPlaybackEngine(playbackEngine);
 
     m_d->playbackEngine = playbackEngine;
+
+    KisActionManager *actionManager = nullptr;
+    if (m_d->canvas && m_d->canvas->viewManager()) {
+        actionManager = m_d->canvas->viewManager()->actionManager();
+    }
+    establishPlaybackEngineConnections(m_d->playbackEngine, actionManager);
 }
 
 void KisAnimTimelineDocker::togglePlayback()
